# SPaRTA

./: .gitignore  LICENSE.txt  Multiple_scattering_MCMC.ipynb  README.md  Tutorial.ipynb  pyproject.toml
Tutorials/: 1. Simulation.ipynb  2. Post-processing.ipynb  3. Correlations.ipynb
src/sparta/: Lyman_alpha.py  __init__.py  constants.py  correlations.py  cosmology.py  inputs.py  interpolation.py  misc.py  outputs.py  plotting.py  post_processing.py  simulation.py
src/sparta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
