[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparta"
version = "1.0.0"
description = "Speedy Lyman alpha ray tracing algorithm"
authors = [
    { name = "Jordan Flitter", email = "jordan.flitter@sns.it" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
"scipy",
"tqdm",
"classy"
]

[tool.setuptools.packages.find]
where = ["src"]